# Poxelcoll

./: INSTALL.txt  README.md
C++/: CMakeLists.txt  INSTALL.txt  generate_documentation.sh
C++/src/poxelcoll/: CollisionInfo.cpp  CollisionInfo.hpp  DataTypes.cpp  DataTypes.hpp  documentation.java
C++/src/poxelcoll/binaryimage/: BinaryImage.hpp  BinaryImageFactory.hpp  BitsetBinaryImage.cpp  BitsetBinaryImage.hpp  SimpleBinaryImage.cpp  SimpleBinaryImage.hpp  documentation.java
C++/src/poxelcoll/collision/: documentation.java
C++/src/poxelcoll/collision/pairwise/: Pairwise.hpp  SimplePixelPerfectPairwise.cpp  SimplePixelPerfectPairwise.hpp  documentation.java
C++/src/poxelcoll/collision/pixelperfect/: PixelPerfect.hpp
C++/src/poxelcoll/functional/: Either.hpp  Functional.hpp  IMList.hpp  IMReverseList.hpp
C++/src/poxelcoll/geometry/: documentation.java
C++/src/poxelcoll/geometry/convexccwpolygon/: CollisionSegmentsFinder.cpp  CollisionSegmentsFinder.hpp  ConvexHull.hpp  DataTypes.cpp  DataTypes.hpp  GeneralFunctions.hpp  IntersectionFromCollisionSegments.cpp  IntersectionFromCollisionSegments.hpp  PolygonIntersection.hpp  documentation.java
C++/src/poxelcoll/geometry/matrix/: Matrix.cpp  Matrix.hpp  Transformation.hpp  documentation.java
C++/src/poxelcoll/mask/: Mask.cpp  Mask.hpp
Scala/: INSTALL.txt  build.sbt  generate_documentation.sh
documentation/latex/: convex_hull_images.tex  datatypes.tex  general_topics.tex  generate_documentation.sh  history.tex  implementation.tex  intro.tex  manual.tex  pixelperfect_coll.tex  polygon_intersection.tex  (+1 more)
(+24 files in other folders)
